--- a/styles/style.css
+++ b/styles/style.css
@@ -349,6 +349,8 @@ body, div, h1, h2, h3, h4, h5, h6, p, ul, li, tr, th, a{
 
 .footer__column-links-set{
   margin: 20px 0 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column-links {
@@ -361,7 +363,3 @@ body, div, h1, h2, h3, h4, h5, h6, p, ul, li, tr, th, a{
   line-height: 30px;
   font-weight: normal;
 } 
-
-.footer__column-link_social{
-  display: inline-block;
-}
