--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,3 +2,12 @@
 @import url(__image/cards__image.css);
 @import url(__item/cards__item.css);
 @import url(__title/cards__title.css);
+.cards {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 920px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
