--- a/style.css
+++ b/style.css
@@ -1,58 +1,22 @@
-.cards {
-    list-style-type: none;
+.video {
+    padding: 100px 0 0 0;
     margin: 0;
-    padding: 0;
-    border: orange 1px solid;
-    width: 920px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.cards__image {
-    width: 160px;
-    height: 160px;
-    border: orange 1px solid;
-    margin: 0 40px;
-    padding: 0;
-    border-radius: 50%;
-}
-
-.techniques {
-    border: orangered 1px solid;
-    width: 80%;
-    margin: 0 auto;
-    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.cards__title {
-    border: orangered 1px solid;
-    margin: 43px 0 16px 0;
+.video__iframes {
+    margin:0;
     padding: 0;
-    text-align: center;
-    line-height: 1.15;
-    font-size: 24px;
-    font-weight: bold;
+    position: relative;
+    top: 50px;
 }
 
-.cards__description {
-    text-align: center;
-    line-height: 23px;
-    font-size: 18px;
-    font-weight: normal;
+.oakley {
     margin: 0;
-    padding: 0;
-}
-
-.cards__item {
-    margin: 60px 100px 0 0;
-    padding: 0;
-    width: 240px;
-}
-
-.cards__item:nth-child(3n) {
-    margin-right:0;
+    padding: 160px 0 0 0;
+    background: #f2f2f2;
+    display: flex;
+    justify-content: center;
 }
