--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,24 +2,9 @@
   color: #2f80ed;
   margin: 0;
   padding: 0;
-}
-
-.header__link:link {
   text-decoration: none;
-  color: white
-}
-
-.header__link:visited {
-  text-decoration: none;
-  color: white
-}
-
-.header__link:active {
-  text-decoration: underline;
-  color: white
 }
 
 .header__link:hover {
-  text-decoration: underline;
-  color: white
+  opacity: .8;
 }
