--- a/blocks/rotation/index.css
+++ b/blocks/rotation/index.css
@@ -1,8 +1,12 @@
 @keyframes rotation {
     from {
-        transform: rotate(0deg);
+        transform: rotate(-15deg);
     }
     to {
-        transform: rotate(360deg);
+        transform: rotate(345deg);
     }
 }
+
+.rotation{
+    animation: rotation 20s infinite linear;
+}  
