--- a/index.css
+++ b/index.css
@@ -17,4 +17,4 @@
 @import url(blocks/video/index.css);
 @import url(blocks/oakley/index.css);
 @import url(blocks/resourses/index.css);
-@import url(blocks/rotation/rotation.css);
+@import url(blocks/rotation/index.css);
