--- a/blocks/feynman/index.css
+++ b/blocks/feynman/index.css
@@ -6,7 +6,7 @@
     position: relative;
     display:flex;
     flex-direction: column;
-    justify-content: flex-srart;
+    justify-content: flex-start;
     align-items: center;
   }
   
