--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -10,6 +10,6 @@
     position: relative;
     display:flex;
     flex-direction: column;
-    justify-content: flex-srart;
+    justify-content: flex-start;
     align-items: center;
   }
