--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,8 +1,7 @@
 .header__title {
-    margin: 0;
-    padding: 0 0 0 60px;
+    margin: 0 0 0 64px;
+    padding: 0;
     z-index: 2;
-    left: 64px;
     line-height: 96px;
     font-size: 102px;
     width: 730px;
