--- a/blocks/header/index.css
+++ b/blocks/header/index.css
@@ -61,8 +61,8 @@
   }
 
   .header__title {
-    margin: 0;
-    padding: 0 0 0 60px;
+    margin: 0 0 0 64px;
+    padding: 0;
     z-index: 2;
     left: 64px;
     line-height: 96px;
