--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -7,4 +7,6 @@
     position: absolute;
     right: -210px;
     top: 0;
+    background-image: url(../../images/kaufman-triangle.svg);
+    background-size: cover;
   }
