--- a/blocks/khan/index.css
+++ b/blocks/khan/index.css
@@ -1,3 +1,9 @@
+.khan {
+    margin: 0;
+    padding: 0;
+    background-color: #f2f2f2;
+}
+
 .khan__container {
     margin: 0 auto;
     padding: 0;
@@ -46,7 +52,7 @@
 
 }
 
-.khan__block-container {
+.khan__book-container {
     margin: 0;
     padding: 0; 
     display: flex;
