--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -7,3 +7,9 @@
 @import url(__quote-author/khan__quote-author.css);
 @import url(__title/khan__title.css);
 @import url(__quote-author-subline/khan__quote-author-subline.css);
+
+.khan {
+    margin: 0;
+    padding: 0;
+    background-color: #f2f2f2;
+}
