--- a/blocks/resourses/index.css
+++ b/blocks/resourses/index.css
@@ -19,4 +19,9 @@
     padding: 0;
     width: 270px;
     height: 38px;
+    transition: opacity 0.5s linear;
   }
+
+.resourses__logo:hover {
+  opacity: 0.6;
+}
