--- a/blocks/video/index.css
+++ b/blocks/video/index.css
@@ -12,3 +12,15 @@
     position: relative;
     top: 50px;
 }
+
+.video__iframe {
+    width: 515px;
+    height: 316px;
+    border: 0;
+    margin: 0;
+    padding: 0%;
+}
+
+.video__iframe:first-of-type {
+    margin-right: 20px;
+}
